@@ -5,6 +5,7 @@ Version 3.8.0
 ----------------------------------------
 + #338 (LightBDD.Framework)(New) Added ScenarioDescriptionAttribute to decorate scenarios with description and updated ReportFormatters to include it
 + #338 Updated XmlReportFormatterSchema.xsd to v2.2 with support for Scenario Description
++ #344 (LightBDD.Core)(Change) Allowed IReportFormatter and IGlobalResourceSetUp implementations to use LightBDDConfigurationAware base
 
 Version 3.7.0
 ----------------------------------------
